<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="btn_upcoming_elections">UPCOMING ELECTIOINS</string>
    <string name="btn_find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="application_logo_description">Application Logo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>

    <string name="btn_text_follow">Follow Election</string>
    <string name="btn_text_unfollow">Unfollow Election</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="state_information">State Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="website">website</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use My Location</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="my_representatives">My Representatives</string>
</resources>
