<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/website"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_www"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/facebook"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="@+id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/twitter"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/tv_representative_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_position"
            app:srcCompat="@drawable/ic_twitter"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/representativePhoto"
            profileImage="@{representative.official.photoUrl}"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_representative_position"
            style="@style/elecRowHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="@+id/representativePhoto"
            tools:text="President Of the United States" />

        <TextView
            android:id="@+id/tv_representative_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toStartOf="@+id/tv_representative_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_position"
            tools:text="Joe Biden"/>

        <TextView
            android:id="@+id/tv_party_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toStartOf="@+id/tv_representative_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_representative_name"
            tools:text="Democratic Party"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>