<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO COMPLETED: Add image for home screen logo. -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/application_logo_description"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop"
            app:srcCompat="@drawable/ballot_logo" />

        <!-- TODO COMPLETED: Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/upcomingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineBegin" />

        <!-- TODO COMPLETED: Add Button to navigate to representatives. -->
        <Button
            android:id="@+id/representativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_my_representatives"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineBegin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="48dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>