<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO COMPLETED: Add data binding node for Voter Info ViewModel -->
    <data>

        <import type="com.example.android.politicalpreparedness.election.adapter.DateStrConverters" />

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

        <variable
            name="election"
            type="com.example.android.politicalpreparedness.network.models.Election" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
            app:layout_constraintTop_toTopOf="parent">

            <!-- TODO: Add title to toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/election_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:singleLine="true"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@{election.name}"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- TODO COMPLETE: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            style="@style/votingInfoLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{DateStrConverters.dateToStr(election.electionDay)}"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            tools:text="12 November 2055" />

        <!-- TODO COMPLETE: Add visual styling and content -->
        <!-- if both "Voting Locations" and "Ballot Information" unavailable, hide the heading as well -->
        <TextView
            android:id="@+id/state_header"
            style="@style/votingInfoH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/state_information"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl) &amp;&amp; TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- TODO COMPLETE: Add click binding to open web URL -->
        <!-- TODO COMPLETE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/votingLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()->viewModel.setUrl(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO COMPLETE: Add click binding to open web URL -->
        <!-- TODO COMPLETE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/votingLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()->viewModel.setUrl(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl)}"
            android:text="@string/ballot_information"
            android:visibility='@{TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl) ? View.GONE : View.VISIBLE}'
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO COMPLETE: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/votingInfoH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/corresponding_address"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- TODO COMPLETE: Add data binding -->
        <TextView
            android:id="@+id/address"
            style="@style/elecRowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Address Goes Here\nSecond Line of Address" />

        <!-- TODO COMPLETE: Add button to save election to Room -->
        <Button
            android:id="@+id/btn_follow_unfollow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onFollowButtonClick()}"
            android:text="@{viewModel.isElectionFollowed ? @string/btn_text_unfollow : @string/btn_text_follow}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/btn_text_follow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>